241022_Docker2Kubernetes/7_Management/rancher/Ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: rancher
  namespace: cattle-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: rancher.x.x.x.x.sslip.io
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
        service:
         name: rancher
         port:
          number: 80
  tls: []
